turtleart.housemany.HouseMany.scala.error
Erreur de compilation :
HouseMany:8: error: ':' expected but ')' found.
def maison(x){ 
            ^HouseMany:31: error: identifier expected but '}' found.
}
^